--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8" ?>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center_vertical"
+    tools:context=".MainActivity"
+    android:stretchColumns="0,3">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="用户名："
+            android:text="用 户 名 "
             android:textSize="20sp"/>
         <EditText
             android:id="@+id/name"
@@ -30,12 +33,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:gravity="center">
 
         <TextView
-            android:layout_width="84dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="密    码:"
+            android:text="密      码 "
             android:textSize="20sp" />
 
         <EditText
@@ -55,7 +59,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="确认密码"
+            android:text="确认密码 "
             android:textSize="20sp" />
         <EditText
             android:id="@+id/pwd2"
@@ -138,5 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="立即注册"
-        android:textSize="20sp"/>
-</LinearLayout>
+        android:textSize="20sp"
+        android:layout_gravity="center_vertical"/>
+
+</TableLayout>
