--- a/Application/app/src/main/res/layout/second_main.xml
+++ b/Application/app/src/main/res/layout/second_main.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".MainActivity"
     android:stretchColumns="0,3">
 
@@ -16,9 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <!-- 第1列 -->
-        <TextView
-            android:layout_width="62dp"
-            android:layout_height="wrap_content" />
+        <TextView/>
         <!-- 第2列 -->
         <TextView
             android:layout_width="wrap_content"
