--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -1,143 +1,128 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".MainActivity"
-    android:stretchColumns="0,3">
+    tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:text="欢迎注册成为会员"
-        android:textSize="20sp"/>
-    <LinearLayout
+        android:textSize="30sp"/>
+
+    <TableLayout
+        android:id="@+id/tb01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center">
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/title1">
+        <TableRow>
+            <TextView
+                android:layout_margin="10dp"
+                android:gravity="center|right"
+                android:text="用 户 名"
+                android:textSize="20sp"/>
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="200dp"
+                android:layout_margin="10dp"
+                android:textSize="15sp"
+                android:inputType="text"/>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_margin="10dp"
+                android:gravity="center|right"
+                android:text="密      码"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/pwd1"
+                android:layout_width="200dp"
+                android:layout_margin="10dp"
+                android:inputType="textPassword"
+                android:textSize="15sp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_margin="10dp"
+                android:gravity="center|right"
+                android:text="确认密码"
+                android:textSize="20sp" />
+            <EditText
+                android:id="@+id/pwd2"
+                android:layout_width="200dp"
+                android:layout_margin="10dp"
+                android:textSize="15sp"
+                android:inputType="textPassword" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/sex"
+                android:layout_margin="10dp"
+                android:gravity="center|right"
+                android:text="性    别"
+                android:textSize="20sp"/>
+            <RadioGroup
+                android:id="@+id/rgSex"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+                <RadioButton
+                    android:id="@+id/man"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="男"
+                    android:textSize="20sp"
+                    android:checked="true"/>
+                <RadioButton
+                    android:id="@+id/woman"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="女"
+                    android:textSize="20sp"
+                    android:checked="false"/>
+            </RadioGroup>
+        </TableRow>
+
+    <TableRow>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="用 户 名 "
+            android:id="@+id/like"
+            android:layout_margin="10dp"
+            android:gravity="center|right"
+            android:text="特   长"
             android:textSize="20sp"/>
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"/>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="密      码 "
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/pwd1"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textSize="15sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="确认密码 "
-            android:textSize="20sp" />
-        <EditText
-            android:id="@+id/pwd2"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:inputType="textPassword" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center">
-    <TextView
-        android:id="@+id/sex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="性    别："
-        android:textSize="20sp"/>
-    <RadioGroup
-        android:id="@+id/rgSex"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <RadioButton
-            android:id="@+id/man"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="男"
-            android:textSize="20sp"
-            android:checked="true"/>
-        <RadioButton
-            android:id="@+id/woman"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="女"
-            android:textSize="20sp"
-            android:checked="false"/>
-    </RadioGroup>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center">
-
-    <TextView
-        android:id="@+id/like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="特  长:"
-        android:textSize="20sp"/>
-
         <CheckBox
             android:id="@+id/like1"
-            android:layout_width="40dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.0"
+            android:layout_weight="1"
             android:text="语文"
             android:textSize="20sp" />
+
         <CheckBox
             android:id="@+id/like2"
-            android:layout_width="40dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.0"
+            android:layout_weight="1"
             android:text="数学"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <CheckBox
             android:id="@+id/like3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.0"
+            android:layout_weight="1"
             android:text="英语"
-            android:textSize="20sp"/>
-
-    </LinearLayout>
+            android:textSize="20sp" />
+    </TableRow>
     <Button
         android:id="@+id/btn"
         android:layout_width="wrap_content"
@@ -145,5 +130,6 @@
         android:text="立即注册"
         android:textSize="20sp"
         android:layout_gravity="center_vertical"/>
+    </TableLayout>
 
-</TableLayout>
+</RelativeLayout>
